Here are further pepperonis, down the pipeline.

--- a/static/css/mumboformatting.css
+++ b/static/css/mumboformatting.css
@@ -1,17 +1,17 @@
-body{
+body {
     color: forestgreen;
 }
 
-h1#tfod{
+h1#tfod {
     left:600px;
 }
 
-nav{
+nav {
     color: forestgreen;
     font-size: 20px;
 }
 
-li:{
+li: {
     color: forestgreen;
 }
 
@@ -24,19 +24,25 @@ a {
 
 }
 
-a:link, a:active{
+a:link, a:active {
     color:greenyellow;
 }
 
-a:hover{
+a:hover {
     color:green;
     font-weight: bolder;
 }
 
-nav-item:li{
+nav-item:li {
     color: forestgreen;
     outline-style: solid;
     outline-color: black;
     
 }
 
+/*form#signup-form {
+    position: relative;
+    left: 200px;
+}
+
+*/
